# vtt-app-wasm

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  dev-setup.sh  development-setup.sh
.arquive/: README.md  dev-setup.sh
.github/workflows/: rust.yml
public/: style.css
sass/: _colors.scss  _jaguara.scss  _refo_anotation.txt  _styles.scss  _stylesheet.scss  index.scss  stylesheet.scss
sass/components/: _nav-bar.scss  _notifications.scss  _overview.scss  _sidebar.scss
src/: main.rs  refo_main.rs  style.css
