[package]
name = "vtt-dioxus"
version = "0.1.0"
authors = ["SilenceFox <cristianplaybr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
sir = { version = "0.4.0", features = ["dioxus"] }
dioxus-signals = "0.4.3"
dioxus-html-macro = "0.3.0"

